Ship movement and shooting logic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		</div>
 	</div>
 	<p	id="debugText"></p>
+	<script src="js/moving-wrapped-position.js"></script>
 	<script src="js/player.js"></script>
+	<script src="js/shot.js"></script>
 	<script src="js/graphics-common.js"></script>
 	<script src="js/input.js"></script>
 	<script src="js/assets-loading.js"></script>
