--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<p	id="debugText"></p>
 	<script src="js/moving-wrapped-position.js"></script>
 	<script src="js/player.js"></script>
+	<script src="js/enemy.js"></script>
 	<script src="js/shot.js"></script>
 	<script src="js/graphics-common.js"></script>
 	<script src="js/input.js"></script>
